Restored old search panel

--- a/skin/gnomestripe/extensions.css
+++ b/skin/gnomestripe/extensions.css
@@ -255,6 +255,10 @@
   background-color: ThreeDHighlight;
 }
 
+#search-panel {
+  margin: 8px 8px -6px;
+}
+
 /*** sorters ***/
 
 .sort-controls {
