--- a/skin/winstripe/extensions.css
+++ b/skin/winstripe/extensions.css
@@ -247,6 +247,10 @@
   background-color: ThreeDHighlight;
 }
 
+#search-panel {
+  margin: 10px 10px -6px;
+}
+
 /*** sorters ***/
 
 .sort-controls {
