--- a/skin/winstripe/extensions.css
+++ b/skin/winstripe/extensions.css
@@ -248,7 +248,11 @@
 }
 
 #search-panel {
-  margin: 10px 10px -6px;
+  margin: 12px 10px -8px;
+}
+
+#browseAddons {
+  text-decoration: underline;
 }
 
 /*** sorters ***/
