Moved command bar buttons for Windows, cleaned up

--- a/skin/winstripe/extensions.css
+++ b/skin/winstripe/extensions.css
@@ -857,3 +857,8 @@ setting[type="radio"] > radiogroup {
 .header-button .toolbarbutton-text {
   display: none;
 }
+
+#checkUpdatesAllButton {
+  -moz-box-ordinal-group: 2;
+}
+
