Fixed text link look

--- a/skin/modern/extensions.css
+++ b/skin/modern/extensions.css
@@ -196,10 +196,6 @@
   margin: 8px 8px -6px;
 }
 
-#browseAddons {
-  text-decoration: underline;
-}
-
 /*** sorters ***/
 
 .sort-controls {
@@ -832,6 +828,7 @@ setting[type="radio"] > radiogroup {
   list-style-image: url("moz-icon://stock/gtk-save?size=button");
 }
 
+.text-link,
 .button-link {
   -moz-appearance: none;
   background: transparent;
@@ -843,6 +840,7 @@ setting[type="radio"] > radiogroup {
   margin: 0 6px;
 }
 
+.text-link:active,
 .button-link:active {
   color: -moz-activehyperlinktext;
 }
