--- a/skin/winstripe/extensions.css
+++ b/skin/winstripe/extensions.css
@@ -237,10 +237,6 @@
   margin: 12px 10px -8px;
 }
 
-#browseAddons {
-  text-decoration: underline;
-}
-
 /*** sorters ***/
 
 .sort-controls {
@@ -839,6 +835,7 @@ setting[type="radio"] > radiogroup {
   display: none;
 }
 
+.text-link,
 .button-link {
   -moz-appearance: none;
   background: transparent;
@@ -850,6 +847,7 @@ setting[type="radio"] > radiogroup {
   margin: 0 6px;
 }
 
+.text-link:active,
 .button-link:active {
   color: -moz-activehyperlinktext;
 }
