--- a/content/extensions.css
+++ b/content/extensions.css
@@ -31,10 +31,6 @@ xhtml|link {
   -moz-binding: url("chrome://oam/content/extensions.xml#addon-uninstalled");
 }
 
-.addon:not([selected]) .status-control-wrapper {
-  visibility: collapse;
-}
-
 .meta-rating {
   -moz-binding: url("chrome://oam/content/extensions.xml#rating");
 }
@@ -74,29 +70,15 @@ xhtml|link {
   display: none;
 }
 
-#addons-page:not([warning]) #list-view > .global-warning-container {
-  display: none;
+.addon:not([selected]) .status-control-wrapper {
+  visibility: collapse;
 }
+
 #addon-list .date-updated {
   display: none;
 }
 
-.view-pane:not(#updates-view) .addon .relnotes-toggle,
-.view-pane:not(#updates-view) .addon .include-update,
 #updates-view .addon .update-notice {
-  display: none;
-}
-
-#addons-page:not([warning]) .global-warning,
-#addons-page:not([warning="safemode"]) .global-warning-safemode,
-#addons-page:not([warning="checkcompatibility"]) .global-warning-checkcompatibility,
-#addons-page:not([warning="updatesecurity"]) .global-warning-updatesecurity {
-  display: none;
-}
-
-/* Plugins aren't yet disabled by safemode (bug 342333),
-   so don't show that warning when viewing plugins. */
-#addons-page[warning="safemode"] .view-pane[type="plugin"] .global-warning-container {
   display: none;
 }
 
@@ -104,7 +86,7 @@ xhtml|link {
   display: none;
 }
 
-.addon .relnotes {
+#infoDisplay {
   -moz-user-select: text;
 }
 
@@ -115,10 +97,6 @@ richlistitem:not([selected]) * {
 
 #header-search {
   width: 22em;
-}
-
-#header-utils-btn {
-  -moz-user-focus: normal;
 }
 
 #experiments-learn-more[disabled="true"] {
