--- a/skin/gnomestripe/extensions.css
+++ b/skin/gnomestripe/extensions.css
@@ -4,6 +4,13 @@
 
 @import url("chrome://oam/skin/extensions-common.css");
 
+.addonThrobber {
+  -moz-margin-start: 5px;
+  width: 16px;
+  height: 16px;
+  list-style-image: url("chrome://global/skin/icons/loading_16.png");
+}
+
 #resizerBox {
   margin-top: -12px;
   visibility: hidden;
@@ -21,7 +28,8 @@
     font-size: 150%;
 }
 
-#themePreviewArea {
+#themePreviewArea,
+#relNotesArea {
   -moz-appearance: listbox;
   border: 2px solid;
   -moz-border-top-colors: ThreeDShadow ThreeDDarkShadow;
@@ -34,11 +42,13 @@
   overflow: auto;
 }
 
-#previewImageDeck {
+#previewImageDeck,
+#infoDeck {
   min-width: 220px;
 }
 
-#themeSplitter {
+#themeSplitter,
+#relNotesSplitter {
  border-width: 0;
 }
 
