--- a/skin/gnomestripe/extensions.css
+++ b/skin/gnomestripe/extensions.css
@@ -4,6 +4,10 @@
 
 @import url("chrome://oam/skin/extensions-common.css");
 
+notification[value="pending"] .messageImage {
+  list-style-image: url(moz-icon://stock/gtk-dialog-info?size=menu);
+}
+
 .addonThrobber {
   -moz-margin-start: 5px;
   width: 16px;
@@ -62,7 +66,6 @@
   height: 16px;
 }
 
-.pending-icon,
 .info-icon {
   list-style-image: url("moz-icon://stock/gtk-dialog-info?size=menu");
   height: 16px;
